[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layer"
version = "0.1.0"
description = "分层竞争式 Agent 编排系统 — 多 Agent 竞标、并行执行、择优合并"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["shellingham>=1.5.4", "typer>=0.24.1"]

[project.scripts]
layer = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
]

[tool.pyinstaller]
onefile = true
name = "layer"
entry = "main.py"
